--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input id="open" type="checkbox">
         <label class="open" for="open"></label>
         <div class="card-front">
-            <div class="note">Valentine Give For Alexis</div>
+            <div class="note">Valentine Give For Alexis<br>"tap to view"<br></div>
         </div>
         <div class="card-inside">
             <div class="text-one">Happy</div>
